--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -85,8 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/male"
-                android:background="@drawable/gender_bg"
-                android:backgroundTint="@color/ThemeColor"
+                android:background="@drawable/gender_male"
                 android:gravity="center"
                 android:text="Male"
                 android:textAlignment="center"
@@ -180,6 +179,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:id="@+id/login"
                 android:text="Login Now"
                 android:textColor="@color/ThemeColor"
                 android:textSize="13dp"
