--- a/app/src/main/res/drawable-v24/gender_male.xml
+++ b/app/src/main/res/drawable-v24/gender_male.xml
@@ -9,7 +9,7 @@
         android:topLeftRadius="30dp"
         android:topRightRadius="0dp" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/ThemeColor" />
 
     <padding
         android:bottom="0dp"
