--- a/app/src/main/res/drawable/gender_female_selected.xml
+++ b/app/src/main/res/drawable/gender_female_selected.xml
@@ -3,13 +3,13 @@
     android:shape="rectangle" >
 
     <corners
-        android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="0dp"
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="30dp"
         android:radius="60dp"
-        android:topLeftRadius="30dp"
-        android:topRightRadius="0dp" />
+        android:topLeftRadius="0dp"
+        android:topRightRadius="30dp" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/ThemeColor" />
 
     <padding
         android:bottom="0dp"
