--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,43 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <EditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/at_icon" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tlEmailLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="20dp"
+            android:hint="abc@gmail.com"
+            android:inputType="textPassword"
+            android:textColor="@color/black">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <!--<EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,7 +91,7 @@
         android:drawablePadding="7dp"
         android:hint="abc@gmail.com"
         android:inputType="textEmailAddress"
-        android:textColor="@color/black" />
+        android:textColor="@color/black" />-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,7 +103,44 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <EditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/password_icon" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tlPasswordLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="20dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:singleLine="true" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+   <!-- <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -81,7 +154,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:textColor="@color/black"
-        app:passwordToggleEnabled="true" />
+        app:passwordToggleEnabled="true" />-->
 
     <Button
         android:layout_width="300dp"
@@ -95,6 +168,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/forgot_pass"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:text="Forgot Password?"
@@ -121,6 +195,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/tv_signup"
             android:layout_gravity="center"
             android:text="Sign Up"
             android:textColor="@color/ThemeColor"
