--- a/app/src/main/res/layout/fragment_bank.xml
+++ b/app/src/main/res/layout/fragment_bank.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            app:cardBackgroundColor="#99ffffff"
             android:paddingBottom="15dp"
             app:cardCornerRadius="5sp"
             app:cardElevation="2dp">
@@ -232,6 +233,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:id="@+id/next"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
