--- a/app/src/main/res/layout/fragment_compliance_and_verification.xml
+++ b/app/src/main/res/layout/fragment_compliance_and_verification.xml
@@ -215,6 +215,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:text="Upload DSL"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -270,14 +271,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:text="Upload Other"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/vw"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView_upload_dsl" />
 
         <View
             android:id="@+id/vw"
-            android:layout_width="255dp"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="@color/viewGrey"
             app:layout_constraintBottom_toBottomOf="@+id/upload_other_tv"
@@ -462,11 +465,12 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:id="@+id/next"
             android:layout_marginStart="50dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="40dp"
-            android:text="Submit"
+            android:text="Next"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
