--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            app:cardBackgroundColor="#99ffffff"
             android:paddingBottom="15dp"
             app:cardCornerRadius="5sp"
             app:cardElevation="2dp">
@@ -283,9 +284,10 @@
                 android:textColor="@color/black"
                 android:textSize="17sp" />
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="35dp"
                 android:text="Peter Dan"
@@ -296,6 +298,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:id="@+id/next"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
