--- a/app/src/main/res/layout/fragment_responsible.xml
+++ b/app/src/main/res/layout/fragment_responsible.xml
@@ -38,11 +38,12 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/submit"
         android:layout_marginStart="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="30dp"
-        android:text="Next"
+        android:text="Submit"
         android:textAllCaps="false"
         android:textSize="15sp" />
 
