--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,22 @@
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="20dp"
+        android:paddingBottom="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="20dp"
+        android:drawableLeft="@drawable/at_icon"
+        android:drawablePadding="7dp"
+        android:hint="abc@gmail.com"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black" />
+
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -76,7 +91,7 @@
                 android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 
     <!--<EditText
         android:id="@+id/email"
@@ -102,8 +117,24 @@
         android:textColor="@color/red"
         android:textSize="15dp"
         android:textStyle="bold" />
+    <waaph.gb.com.utils.EditTextDrawableClick
+        android:id="@+id/edit_text_password"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:paddingBottom="10dp"
+        android:drawableLeft="@drawable/password_icon"
+        android:drawableRight="@drawable/hide_password_icon"
+        android:drawablePadding="7dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingEnd="10dp">
 
-    <LinearLayout
+
+    </waaph.gb.com.utils.EditTextDrawableClick>
+
+   <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -138,7 +169,7 @@
             android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
+    </LinearLayout>-->
 
    <!-- <EditText
         android:id="@+id/password"
