--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -28,7 +28,7 @@
             <View
                 android:layout_width="200dp"
                 android:layout_height="1dp"
-                android:background="@color/viewGrey"
+                android:background="@color/TopviewGrey"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="3dp"/>
@@ -48,7 +48,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             app:cardElevation="2dp"
-            app:cardBackgroundColor="#99ffffff"
             android:layout_marginEnd="20dp"
             android:paddingBottom="15dp"
             app:cardCornerRadius="5sp">
