--- a/app/src/main/res/layout/fragment_general.xml
+++ b/app/src/main/res/layout/fragment_general.xml
@@ -37,7 +37,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="3dp"
                     android:layout_marginEnd="20dp"
-                    android:background="@color/viewGrey" />
+                    android:background="@color/TopviewGrey" />
 
             </LinearLayout>
 
