--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,6 +63,21 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+   <!-- <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">-->
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView_my_profile"
@@ -103,7 +118,7 @@
             android:id="@+id/cardView_salaryslip"
             android:layout_width="80dp"
             android:layout_height="120dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
             android:backgroundTint="@color/blue"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
@@ -379,7 +394,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="185dp"
             android:layout_height="120dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:backgroundTint="@color/blue"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
@@ -412,7 +427,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="175dp"
             android:layout_height="120dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:backgroundTint="@color/homeGrey"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
@@ -441,5 +456,7 @@
                     android:textSize="15sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+<!--    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
