--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -31,7 +31,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="3dp"
                 android:layout_marginEnd="10dp"
-                android:background="@color/viewGrey"  />
+                android:background="@color/TopviewGrey"  />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -47,7 +47,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            app:cardBackgroundColor="#99ffffff"
             android:paddingBottom="15dp"
             app:cardCornerRadius="5sp"
             app:cardElevation="2dp">
