--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,11 @@
     <color name="homeGrey">#6B7A89</color>
     <color name="darkBlue">#5C81AA</color>
     <color name="lightBlue">#60C2D7</color>
-    <color name="viewGrey">#888888</color>
+    <color name="viewGrey">#efefef</color>
+    <color name="TopviewGrey">#888888</color>
+
+    <color name="dd">#404040</color>
+
 
 
 </resources>
